Modifying horizontal rules for spacing, per issue #81.

--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -138,7 +138,7 @@ p, pre, blockquote, ul, ol, dl, figure, figcaption, table, fieldset, details {
 }
 
 hr {
-	@include fontSize(32);
+	font-size: $font-size-base/2;
 	line-height: 1;
 	text-align: center;
 	margin: 1em 0 1.5em; /* 0 0 32px */
